# quantrs

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: tests.py.yml
examples/: Cargo.toml  README.md
examples/src/data/: XRPUSD_1h.csv
examples/tests/trend/: sma.rs
quantrs/: Cargo.toml  LICENSE  README.md
quantrs-py/: Cargo.toml  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
quantrs-py/.github/workflows/: test.yml
quantrs-py/python/quantrs/: __init__.py  __init__.pyi
quantrs-py/scripts/: setup_dev.sh
quantrs-py/src/: lib.rs
quantrs-py/tests/: test_sma.py  test_trend.py
quantrs/src/: error.rs  lib.rs
quantrs/src/averages/: sma.rs
quantrs/src/trend/: ema.rs  mod.rs  sma.rs
